--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -10,72 +11,387 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.alazh.mycv.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:id="@+id/textView"
-        tools:text="username"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        tools:textColor="@color/colorPrimary"
-        android:text="username" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:id="@+id/editText"
-        style="@android:style/Widget.DeviceDefault.EditText"
-        tools:text="@string/username"
-        android:text="@string/username" />
+        android:layout_alignParentStart="true">
 
-    <TextView
-        android:text="Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="27dp"
-        android:id="@+id/textView2"
-        tools:fontFamily="sans-serif-smallcaps"
-        android:password="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        style="@android:style/Widget.DeviceDefault.TextView"
-        tools:textColor="@color/colorPrimaryDark" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:id="@+id/editText2"
-        android:text="@string/password"
-        tools:text="@string/password" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="58dp"
+                android:background="@color/colorAccent">
 
-    <Button
-        android:text="Login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="78dp"
-        android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button.Small"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        tools:background="@color/colorPrimary"
-        tools:textColor="@color/black"
-        tools:fontFamily="sans-serif-condensed"
-        android:layout_below="@+id/editText2"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_toEndOf="@+id/textView"
-        android:onClick="onClick" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="66dp"
+                    android:id="@+id/imageView3"
+                    android:scaleType="fitCenter"
+                    android:layout_weight="0.33"
+                    android:visibility="visible"
+                    android:src="@drawable/per_info" />
+
+                <TextView
+                    android:text="Personal Info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView29"
+                    android:layout_weight="1"
+                    android:textColor="?attr/colorControlNormal"
+                    android:textStyle="normal|bold|italic"
+                    android:textSize="30sp"
+                    android:layout_marginTop="13dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:layout_height="wrap_content"
+                android:id="@+id/linarlayout">
+
+                <TextView
+                    android:text="Full Name:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView16"
+                    android:layout_weight="1"
+                    tools:text="Full Name:  "
+                    tools:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/name"
+                    android:layout_weight="1"
+                    android:textStyle="normal|bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Phone:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView22"
+                    android:layout_weight="1"
+                    tools:text="Phone:"
+                    tools:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/phone"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="E-mail:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView6"
+                    android:layout_weight="1"
+                    android:textStyle="normal|bold"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/email"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                android:layout_marginTop="5dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:id="@+id/imageView2"
+                    android:layout_weight="0.08"
+                    android:visibility="visible"
+                    android:src="@drawable/edu_name" />
+
+                <TextView
+                    android:text="Eudcational"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView32"
+                    android:layout_weight="0.18"
+                    android:layout_marginTop="10dp"
+                    android:textSize="30sp"
+                    android:textStyle="normal|bold|italic"
+                    android:layout_marginRight="1dp" />
+
+                <Button
+                    android:text="+"
+                    android:layout_width="45dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/eduPlus"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginRight="7dp"
+                    android:onClick="onEduPlusClick"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:elevation="0dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat"
+                    android:textStyle="normal|bold"
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:theme="@style/AlertDialog.AppCompat.Light"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:text="Education Degree"
+                    android:layout_width="127dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView30"
+                    android:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:layout_width="85dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/eduDeg"
+                    android:entries="@array/spinnereu"/>
+
+                <TextView
+                    android:text="Year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView31"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:layout_width="79dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/year1"
+                    android:entries="@array/spinneryear"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="Specialty "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView34"
+                    android:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="96dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/specialty" />
+
+                <TextView
+                    android:text="Institution "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView33"
+                    android:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="112dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/instit" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorAccent"
+                android:layout_marginTop="5dp">
+
+                <ImageView
+                    android:layout_width="62dp"
+                    android:layout_height="59dp"
+                    android:id="@+id/imageView6"
+                    android:visibility="visible"
+                    android:src="@drawable/trian_name" />
+
+                <TextView
+                    android:text="Training "
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView35"
+                    android:layout_weight="0.87"
+                    android:textColor="?attr/colorControlNormal"
+                    android:textStyle="normal|bold|italic"
+                    android:textSize="30sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="7dp"
+                    android:textAlignment="center" />
+
+                <Button
+                    android:text="+"
+                    android:layout_width="48dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/trainPlus"
+                    android:onClick="onTrainPlusClick"
+                    android:textSize="24sp"
+                    android:textStyle="normal|bold"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginRight="5dp"
+                    android:elevation="11dp"
+                    style="@style/Widget.AppCompat.Button.Borderless" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:text="Topic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView38"
+                    android:layout_weight="2195.11"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold" />
+
+                <EditText
+                    android:layout_width="93dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/topic" />
+
+                <TextView
+                    android:text="Training Hours"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView36"
+                    android:layout_weight="435.12"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="@android:color/black" />
+
+                <EditText
+                    android:layout_width="90dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/hours" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:text="Company"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView40"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold" />
+
+                <EditText
+                    android:layout_width="71dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/company" />
+
+                <TextView
+                    android:text="Duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView39"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/black"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:layout_width="79dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/duration" />
+            </LinearLayout>
+
+            <Button
+                android:text="Save"
+                android:layout_width="wrap_content"
+                android:layout_height="46dp"
+                android:id="@+id/button"
+                tools:text="Save"
+                tools:onClick="onClick"
+                android:onClick="onClick"
+                android:layout_alignParentBottom="true"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:gravity="center_vertical|center_horizontal|start"
+                android:layout_marginTop="18dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
