--- a/app/src/main/res/layout/fragment_education.xml
+++ b/app/src/main/res/layout/fragment_education.xml
@@ -2,16 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alazh.mycv.Education">
+    tools:context="com.example.alazh.mycv.Education"
+    android:background="@drawable/eduu">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/eduu"
-        android:weightSum="1">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -30,14 +29,27 @@
                 android:textStyle="normal|bold|italic"
                 android:textSize="30sp"
                 android:textAlignment="center" />
+
         </LinearLayout>
 
         <ListView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="50dp" />
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="1" />
+
+        <Button
+            android:text="Next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button3"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="normal|bold"
+            android:onClick="onClick" />
 
     </LinearLayout>
+
 </FrameLayout>
