--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -2,118 +2,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alazh.mycv.Training">
+    tools:context="com.example.alazh.mycv.Education"
+    android:background="@drawable/bback">
 
     <!-- TODO: Update blank fragment layout -->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:onClick="onClick"
-        android:onClick="onClick"
-        android:id="@+id/tranRelative">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:text="Training and Qualifications"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="21dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="25dp"
-            android:id="@+id/textView13"
-            tools:text="Training and Qualifications"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textStyle="bold"
-            tools:textColor="@color/colorPrimaryDark"
-            tools:textSize="36sp" />
-
-        <TextView
-            android:text="Jwar Company    "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textView14"
-            android:layout_alignLeft="@+id/textView14"
-            android:layout_alignStart="@+id/textView14"
-            android:layout_marginTop="35dp"
-            android:id="@+id/textView15"
-            tools:text="Jwar Company "
-            tools:textColor="@color/colorPrimaryDark"
-            tools:textSize="30sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:text=" Android Development"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView17"
-            tools:text=" Android Development"
-            tools:textColor="@color/colorPrimaryDark"
-            tools:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginTop="23dp"
-            android:layout_below="@+id/textView14"
-            android:layout_toEndOf="@+id/textView14"
-            android:layout_toRightOf="@+id/textView14" />
-
-        <TextView
-            android:text="Caritas "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
-            android:id="@+id/textView19"
-            tools:text="Caritas "
-            android:textColor="@color/colorPrimaryDark"
-            android:textStyle="normal|bold"
-            tools:textSize="30sp"
-            android:layout_below="@+id/textView18"
-            android:layout_alignLeft="@+id/textView15"
-            android:layout_alignStart="@+id/textView15" />
-
-        <TextView
-            android:text="Life Skills Training"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView20"
-            tools:text="Life Skills Training"
-            tools:textColor="@color/colorPrimaryDark"
-            tools:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_below="@+id/textView18"
-            android:layout_alignRight="@+id/textView13"
-            android:layout_alignEnd="@+id/textView13"
-            android:layout_marginTop="25dp"
-            android:layout_toRightOf="@+id/textView18"
-            android:layout_toEndOf="@+id/textView18" />
-
-        <TextView
-            android:text="Dec/2016 - Persent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView14"
-            tools:text="Dec/2016 - Persent"
-            tools:textColor="@color/green"
-            android:textColor="@color/green"
-            android:textStyle="bold"
-            tools:textSize="30sp"
-            android:layout_marginTop="51dp"
-            android:layout_below="@+id/textView13"
-            android:layout_alignRight="@+id/textView18"
-            android:layout_alignEnd="@+id/textView18" />
-
-        <TextView
-            android:text="Oct/2016 - Dec/2016"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView18"
-            tools:text="Oct/2016 - Dec/2016"
-            android:textColor="@color/green"
-            android:textStyle="normal|bold"
-            tools:textSize="30sp"
-            android:layout_below="@+id/textView17"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="Training "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="15dp"
+            android:textColor="@color/black"
+            android:textStyle="normal|bold|italic"
+            android:textSize="30sp"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listT"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="10dp" />
 </FrameLayout>
